# voice-assistant-ui

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  uninstall.sh  vite.config.ts
.github/workflows/: build.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConversationBubble.svelte  RecordButton.svelte  StatusIndicator.svelte  Waveform.svelte
